public/stylesheets/login.css
body {
	height: 100vh;
	width: 100vw;
	margin: 0;
	font-family: "Questrial";
}

#container {
	background-color: white;
	padding: 0;
}

#container .row {
	margin: 0;
}

#leftCol {
	height: 100vh;
	background-color: white;
	padding: 0;
}

#leftInfoBar {
	height: 5%;
}

#leftInfoBar button {
	font-size: 24px;
}

#middleCol {
	height: 100vh;
	padding: 0;
	background-color: rgb(66, 194, 153);
}

#middleInfoBar {
	margin: 0;
	padding: 0;
	height: 5%;
	background-color: white;
	padding-left: 1%;
	padding-top: 1%;
}

#input {
	height: 90%;
	width: 100%;
	margin: 0;
	/* background-image: url("../images/Background\ Image.png"); */
	background-repeat: no-repeat;
	background-attachment: fixed;
	background-position: center;
}



#inputError {
	font-size: 100% !important;
	color: red;
}

.radioSize {
	font-size: 100% !important;
	color: red;
}

#middleCol form {
	width: 100%;
	height: 20%;
	font-size: 100%;
	text-align: center;
	color: white;
}

#middleCol .input-group {
	width: 50%;
	padding: 0;
	margin: 0 auto;
	float: none;
}

#middleCol button {
	font-size: 24px;
	background-color: white;
}

#rightCol {
	background-color: white;
	padding: 0;
}

input, span, button {
    box-sizing: content-box;
	-moz-box-sizing: content-box;
	border-radius: 0 !important;
	border-color: white !important;
	background-color: white;
	border: 0 !important;
	padding: 0;
	font-size: 24px;
	/* text-align: center; */
}

textarea:hover, 
input:hover, 
textarea:active, 
input:active, 
textarea:focus, 
input:focus,
button:focus,
button:active,
button:hover,
label:focus,
.btn:active,
.btn.active
{
    outline:0px !important;
    -webkit-appearance:none;
    box-shadow: none !important;
}


/* body {
	font-family: Questrial;
	font-size: 14px;
	line-height: 1.428571429;
	color: black;
	background-color: rgb(66, 194, 153);
	background-repeat: round;
	max-width: 700px;
	margin: auto;
 }

.header{
	font-size: 40px;
}

.textfield{
	border-radius: 7px;
	width: 300px;
	margin-right: 20px;
	margin-bottom: 20px;
}

.colorpicker{
	border-radius: 15px;
	width: 40px;
	margin-bottom: 20px;
}

.button{
	border-radius: 7px;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
	margin-bottom: 40px;
} */

